dev icons added

--- a/results.html
+++ b/results.html
@@ -11,7 +11,7 @@
     <meta db=dc data-in="Dhaka College" data-main_roll_digits="3">
     <meta db=cc data-in="Chittagonj College" data-main_roll_digits="3">
     <meta db=gccc data-in="Chittagonj City College" data-main_roll_digits="3">
-    
+
     <!-- custom css -->
     <link rel="stylesheet" href="css/index.css">
     <!-- chartjs css -->
@@ -33,10 +33,9 @@
 <body>
     <header>
         <div class="header-logo">
-            <svg xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 24 24" fill="white" width="18px" height="18px">
-            <path d="M0 0h24v24H0z" fill="none" />
-            <path d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z" /></svg>Show<span>Result</span></div>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="white" width="18px" height="18px">
+                <path d="M0 0h24v24H0z" fill="none" />
+                <path d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z" /></svg>Show<span>Result</span></div>
         <div class="search-area">
             <input type="text" class="search-input" placeholder="Search Roll">
             <button class="hover-expand v-s"
@@ -79,8 +78,13 @@
                                 <path d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z" /></svg></span>
 
                         <ul class="collapse__menu">
-                            <a style="display:none;" href="results.html?in=dc&xm=hsc_2021_1st_year_science_midterm" class="collapse__sublink" data-db='dc' data-xm="hsc_2021_1st_year_science_midterm">Half Yearly HSC-2021</a>
-                            <a href="results.html?in=dc&xm=hsc_2021_1st_year_science_final_2" class="collapse__sublink" data-db='dc' data-xm="hsc_2021_1st_year_science_final_2" data-is_rank_given=1  data-xm_name='20-Aug-2020 To 09-Sep-2020 XI Year Final (1st Year HSC - Science Session :2019-2020)'>Final HSC-2021</a>
+                            <a style="display:none;" href="results.html?in=dc&xm=hsc_2021_1st_year_science_midterm"
+                                class="collapse__sublink" data-db='dc' data-xm="hsc_2021_1st_year_science_midterm">Half
+                                Yearly HSC-2021</a>
+                            <a href="results.html?in=dc&xm=hsc_2021_1st_year_science_final_2" class="collapse__sublink"
+                                data-db='dc' data-xm="hsc_2021_1st_year_science_final_2" data-is_rank_given=1
+                                data-xm_name='20-Aug-2020 To 09-Sep-2020 XI Year Final (1st Year HSC - Science Session :2019-2020)'>Final
+                                HSC-2021</a>
                         </ul>
                     </div>
                     <div class="nav__link collapse">
@@ -98,8 +102,14 @@
                                 <path d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z" /></svg></span>
 
                         <ul class="collapse__menu">
-                            <a href="results.html?in=rc&xm=hsc_2021_1st_year_science_midterm" class="collapse__sublink" data-db='rc' data-xm="hsc_2021_1st_year_science_midterm" data-xm_name="14-Jan-2020 To 12-Feb-2020 Half Yearly (1st Year HSC - Science Session :2019-2020)">Half Yearly HSC-2021</a>
-                            <a href="results.html?in=rc&xm=hsc_2021_1st_year_science_final" class="collapse__sublink" data-db='rc' data-xm="hsc_2021_1st_year_science_final" data-is_rank_given=1  data-xm_name="20-Aug-2020 To 12-Sep-2020 Year Final Exam (1st Year HSC - Science Session :2019-2020)">Final HSC-2021</a>
+                            <a href="results.html?in=rc&xm=hsc_2021_1st_year_science_midterm" class="collapse__sublink"
+                                data-db='rc' data-xm="hsc_2021_1st_year_science_midterm"
+                                data-xm_name="14-Jan-2020 To 12-Feb-2020 Half Yearly (1st Year HSC - Science Session :2019-2020)">Half
+                                Yearly HSC-2021</a>
+                            <a href="results.html?in=rc&xm=hsc_2021_1st_year_science_final" class="collapse__sublink"
+                                data-db='rc' data-xm="hsc_2021_1st_year_science_final" data-is_rank_given=1
+                                data-xm_name="20-Aug-2020 To 12-Sep-2020 Year Final Exam (1st Year HSC - Science Session :2019-2020)">Final
+                                HSC-2021</a>
                         </ul>
                     </div>
                     <div class="nav__link collapse">
@@ -117,8 +127,14 @@
                                 <path d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z" /></svg></span>
 
                         <ul class="collapse__menu">
-                            <a href="results.html?in=cc&xm=hsc_2021_1st_year_science_midterm" class="collapse__sublink" data-db='cc' data-xm="hsc_2021_1st_year_science_midterm"   data-xm_name="11-Nov-2019 To 27-Nov-2019 Half Yearly (1st Year HSC - Science Session :2019-2020)">Half Yearly HSC-2021</a>
-                            <a href="results.html?in=cc&xm=hsc_2021_1st_year_science_final" class="collapse__sublink" data-db='cc' data-xm="hsc_2021_1st_year_science_final"  data-xm_name="20-Sep-2020 To 30-Sep-2020 Year Final Exam (1st Year HSC - Science Session :2019-2020)">Final HSC-2021</a>
+                            <a href="results.html?in=cc&xm=hsc_2021_1st_year_science_midterm" class="collapse__sublink"
+                                data-db='cc' data-xm="hsc_2021_1st_year_science_midterm"
+                                data-xm_name="11-Nov-2019 To 27-Nov-2019 Half Yearly (1st Year HSC - Science Session :2019-2020)">Half
+                                Yearly HSC-2021</a>
+                            <a href="results.html?in=cc&xm=hsc_2021_1st_year_science_final" class="collapse__sublink"
+                                data-db='cc' data-xm="hsc_2021_1st_year_science_final"
+                                data-xm_name="20-Sep-2020 To 30-Sep-2020 Year Final Exam (1st Year HSC - Science Session :2019-2020)">Final
+                                HSC-2021</a>
                         </ul>
                     </div>
                     <div class="nav__link collapse">
@@ -136,7 +152,9 @@
                                 <path d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z" /></svg></span>
 
                         <ul class="collapse__menu">
-                            <a href="results.html?in=gccc&xm=hsc_2021_1st_year_science_midterm" data-db="gccc" data-xm="hsc_2021_1st_year_science_midterm"  data-is_rank_given=1  class="collapse__sublink">Half Yearly HSC-2021</a>
+                            <a href="results.html?in=gccc&xm=hsc_2021_1st_year_science_midterm" data-db="gccc"
+                                data-xm="hsc_2021_1st_year_science_midterm" data-is_rank_given=1
+                                class="collapse__sublink">Half Yearly HSC-2021</a>
                             <!-- <a href="#" class="collapse__sublink">Final HSC-2021</a> -->
                         </ul>
                     </div>
@@ -242,6 +260,53 @@
         <div class="card" id="show_all">
             <button class="hover-expand btn--jump is-active">Show all students' result</button>
             <p>Developer: MUSH</p>
+            <div class="dev-icons">
+                <span class="dev-icon">
+                    <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
+                        xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="35.318px" height="35.318px"
+                        viewBox="0 0 35.318 35.318" style="enable-background:new 0 0 35.318 35.318;"
+                        xml:space="preserve">
+                        <g>
+                            <path
+                                d="M23.71,34.689c-0.172,0.062-0.345,0.137-0.522,0.168c-0.678,0.121-1.112-0.229-1.116-0.922
+            c-0.009-1.287-0.009-2.572,0.012-3.859c0.022-1.48-0.012-2.941-1.139-4.162c0.67-0.12,1.266-0.204,1.849-0.338
+            c3.862-0.887,5.868-3.323,6.124-7.366c0.131-2.058-0.236-3.946-1.604-5.567c-0.099-0.114-0.104-0.373-0.057-0.539
+            c0.364-1.34,0.258-2.649-0.166-3.959c-0.105-0.327-0.279-0.428-0.602-0.407c-1.134,0.063-2.173,0.461-3.089,1.073
+            c-0.883,0.593-1.705,0.722-2.754,0.482c-2.31-0.521-4.635-0.369-6.94,0.165c-0.261,0.062-0.612-0.021-0.851-0.161
+            c-1.082-0.634-2.164-1.25-3.412-1.496c-0.965-0.188-1.049-0.14-1.305,0.793C7.816,9.77,7.784,10.947,8.113,12.13
+            c0.047,0.172-0.002,0.448-0.117,0.575c-2.557,2.853-1.631,8.244,0.092,10.309c1.34,1.604,3.12,2.326,5.096,2.701
+            c0.345,0.064,0.688,0.113,1.033,0.173c-0.296,0.77-0.562,1.497-0.863,2.212c-0.059,0.138-0.246,0.254-0.399,0.312
+            c-1.938,0.752-3.604,0.199-4.713-1.56c-0.593-0.938-1.354-1.639-2.488-1.842c-0.036-0.007-0.073-0.026-0.106-0.021
+            c-0.305,0.08-0.607,0.164-0.911,0.246c0.171,0.238,0.292,0.558,0.521,0.701c0.961,0.608,1.586,1.475,1.999,2.498
+            c0.649,1.604,1.909,2.319,3.546,2.459c0.799,0.065,1.606,0.01,2.481,0.01c0,0.996,0.036,2.133-0.015,3.265
+            c-0.026,0.61-0.639,0.854-1.373,0.604c-1.947-0.666-3.752-1.621-5.311-2.963C0.956,26.96-1.214,20.83,0.657,13.655
+            C2.522,6.503,7.383,2.116,14.651,0.739C24.708-1.163,34.235,6.161,35.233,16.37C36.021,24.418,31.284,31.949,23.71,34.689z
+             M14.229,25.85c-0.006,0.014-0.01,0.024-0.016,0.038c0.018,0.003,0.036,0.006,0.055,0.009
+            C14.282,25.898,14.294,25.923,14.229,25.85z M9.679,29.031c0.157,0.097,0.307,0.22,0.477,0.273c0.062,0.02,0.177-0.121,0.38-0.271
+            c-0.282-0.107-0.448-0.201-0.623-0.225C9.845,28.8,9.757,28.953,9.679,29.031z M11.112,29.277c0.023,0.105,0.232,0.236,0.355,0.234
+            c0.119-0.002,0.235-0.16,0.354-0.25c-0.108-0.099-0.216-0.195-0.548-0.494C11.201,28.975,11.082,29.143,11.112,29.277z
+             M12.87,28.854c-0.148,0.035-0.273,0.172-0.408,0.266c0.079,0.1,0.158,0.193,0.285,0.35c0.175-0.16,0.294-0.271,0.414-0.379
+            C13.061,29.004,12.944,28.836,12.87,28.854z M8.512,28.261c0.082,0.155,0.209,0.289,0.381,0.508
+            c0.115-0.188,0.24-0.332,0.218-0.361c-0.109-0.143-0.257-0.26-0.403-0.367C8.698,28.033,8.495,28.227,8.512,28.261z" />
+                        </g>
+                    </svg>
+                </span>
+                <span class="dev-icon">
+                    <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
+                        xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512"
+                        style="enable-background:new 0 0 512 512;" xml:space="preserve">
+                        <g>
+                            <g>
+                                <path d="M448,0H64C28.704,0,0,28.704,0,64v384c0,35.296,28.704,64,64,64h192V336h-64v-80h64v-64c0-53.024,42.976-96,96-96h64v80
+			h-32c-17.664,0-32-1.664-32,16v64h80l-32,80h-48v176h96c35.296,0,64-28.704,64-64V64C512,28.704,483.296,0,448,0z" />
+                            </g>
+                        </g>
+                    </svg>
+                </span>
+                <span class="dev-icon">
+                    <svg height="512pt" viewBox="0 0 512 512" width="512pt" xmlns="http://www.w3.org/2000/svg"><path d="m256 0c-141.363281 0-256 114.636719-256 256s114.636719 256 256 256 256-114.636719 256-256-114.636719-256-256-256zm-74.390625 387h-62.347656v-187.574219h62.347656zm-31.171875-213.1875h-.40625c-20.921875 0-34.453125-14.402344-34.453125-32.402344 0-18.40625 13.945313-32.410156 35.273437-32.410156 21.328126 0 34.453126 14.003906 34.859376 32.410156 0 18-13.53125 32.402344-35.273438 32.402344zm255.984375 213.1875h-62.339844v-100.347656c0-25.21875-9.027343-42.417969-31.585937-42.417969-17.222656 0-27.480469 11.601563-31.988282 22.800781-1.648437 4.007813-2.050781 9.609375-2.050781 15.214844v104.75h-62.34375s.816407-169.976562 0-187.574219h62.34375v26.558594c8.285157-12.78125 23.109375-30.960937 56.1875-30.960937 41.019531 0 71.777344 26.808593 71.777344 84.421874zm0 0"/></svg>
+                </span>
+            </div>
         </div>
 
 
