--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                             <!-- <a href="#" class="collapse__sublink">Final HSC-2021</a> -->
                         </ul>
                     </div>
-                    <a href="#" class="nav__link">
+                    <a href="#" class="nav__link" onclick="alert('Not added yet! - developer MUSH')">
                         <svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" viewBox="0 0 24 24"
                             fill="white" width="18px" height="18px">
                             <g>
@@ -172,7 +172,7 @@
                 </div>
             </div>
 
-            <a href="#" class="nav__link">
+            <!-- <a href="#" class="nav__link">
                 <svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" viewBox="0 0 24 24"
                     fill="white" width="18px" height="18px">
                     <g>
@@ -184,7 +184,7 @@
                     </g>
                 </svg>
                 <span class="nav__name">Log Out</span>
-            </a>
+            </a> -->
         </nav>
     </div>
     <section id="main-container">
