searching by name functionality added

--- a/index.html
+++ b/index.html
@@ -243,6 +243,10 @@
                 <input class="gate" id="std_roll" type="text" placeholder="3 digit ROLL number" />
                 <label for="std_roll">Roll</label>
             </div>
+            <div>
+                <input class="gate" id="std_name" type="text" placeholder="Or, Seach by name" />
+                <label for="std_name">Name</label>
+            </div>
             <div class="btn-grp">
                 <div style="text-align: center;">
                     <button id="search_result" class="hover-expand ">show result</button>
@@ -251,10 +255,6 @@
                     <button id="compare_result" class="hover-expand ">Compare</button>
                 </div>
             </div>
-            <!-- <div>
-                <input class="gate" id="std_name" type="text" placeholder="Seach by name is currently off" />
-                <label for="std_name">Name</label>
-            </div> -->
         </div>
 
         <div class="card" id="show_all">
