fix: searchByName - tolowercase and ui updated for tab

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <span class="nav__name">Main</span>
                     </a>
 
-                    <div class="nav__link collapse">
+                    <div class="nav__link collapse" data-in="dc">
                         <span class="nav__icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="white"
                                 width="18px" height="18px">
                                 <path d="M0 0h24v24H0z" fill="none" />
@@ -87,7 +87,7 @@
                                 HSC-2021</a>
                         </ul>
                     </div>
-                    <div class="nav__link collapse">
+                    <div class="nav__link collapse" data-in="rc">
                         <span class="nav__icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="white"
                                 width="18px" height="18px">
                                 <path d="M0 0h24v24H0z" fill="none" />
@@ -112,7 +112,7 @@
                                 HSC-2021</a>
                         </ul>
                     </div>
-                    <div class="nav__link collapse">
+                    <div class="nav__link collapse" data-in="cc">
                         <span class="nav__icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="white"
                                 width="18px" height="18px">
                                 <path d="M0 0h24v24H0z" fill="none" />
@@ -137,7 +137,7 @@
                                 HSC-2021</a>
                         </ul>
                     </div>
-                    <div class="nav__link collapse">
+                    <div class="nav__link collapse" data-in="gccc">
                         <span class="nav__icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="white"
                                 width="18px" height="18px">
                                 <path d="M0 0h24v24H0z" fill="none" />
