added; manifest file added

--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
     <meta db=cc data-in="Chittagonj College" data-main_roll_digits="3">
     <meta db=gccc data-in="Chittagonj City College" data-main_roll_digits="3">
 
+    <!-- manifest -->
+    <link rel="manifest" href="./manifest.json">
+    
+    <!-- ios support -->
+    <link rel="apple-touch-icon" href="./others/icon-96x96.png">
+    <meta name="apple-mobile-web-app-status-bar" content="#2873ff">
+    <meta name="theme-color" content="#2873ff">
+
+
     <!-- custom css -->
     <link rel="stylesheet" href="css/index.css">
     <!-- chartjs css -->
