pwa completed with all icons

--- a/index.html
+++ b/index.html
@@ -26,7 +26,11 @@
 
     <!-- manifest -->
     <link rel="manifest" href="manifest.json">
-    
+
+    <!-- icons -->
+    <link rel="icon" type="image/png" sizes="32x32" href="others/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="others/favicon-16x16.png">
+
     <!-- ios support -->
     <link rel="apple-touch-icon" href="others/icon-96x96.png">
     <meta name="apple-mobile-web-app-status-bar" content="#2873ff">
