--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <link rel="manifest" href="manifest.json">
 
     <!-- icons -->
+    <link rel="shortcut icon" href="./others/favicon.ico" type="image/x-icon">
     <link rel="icon" type="image/png" sizes="32x32" href="others/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="others/favicon-16x16.png">
 
