--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 
-    <base href="http://localhost:5500/">
+    <base href="https://smmus.github.io/showresult/">
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
